--- a/GDTVJam/Config/DefaultEngine.ini
+++ b/GDTVJam/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/AssetsMap.AssetsMap
-EditorStartupMap=/Game/Maps/AssetsMap.AssetsMap
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/Game/GM_Gameplay.GM_Gameplay_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
