--- a/GDTVJam/Config/DefaultInput.ini
+++ b/GDTVJam/Config/DefaultInput.ini
@@ -80,6 +80,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +AxisMappings=(AxisName="MoveForBack",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForBack",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveLeftRight",Scale=-1.000000,Key=A)
